--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
 	<string name="app_name">WongnaiAssignment</string>
+    <string name="coin_description">Bitcoin is the first decentralized digital currency that can be sent through the internet globally without using financial institutions like banks. The network is controlled by many of its users, instead of a few entities.</string>
+    <string name="coin_name">Coin Name</string>
 </resources>
